@@ -36,7 +36,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2008-01-07 DP  1.8.2  Ensure the properties dialogues will work sanely with 
+2008-01-07 DP  1.8.2  Newer build of EnterpriseDB consistently strip trailing 
+                      semi-colons from package headers and bodies. Update 
+                      reverse engineering allow for this.
+2008-01-07 DP  1.8.2  Ensure the properties dialogues will work sanely with
                       objects named " " (!).
 2008-01-07 DP  1.8.2  EDB-SPL functions require NULL to be passed in out-params
                       when debugging.
@@ -1070,6 +1073,7 @@ Date       Dev Ver    Change details
 2003-08-07 AP  0.9.2  help system cleanups, support of CHM help for win32.
 2003-08-07 AP  0.9.2  Added missing comment in domain property.
 2003-08-06 DP  0.9.2  Bumped version number.
+
 
 
 
